--- a/configs/m3_linux_f16ref_gbox_v2.1_defconfig
+++ b/configs/m3_linux_f16ref_gbox_v2.1_defconfig
@@ -22,7 +22,7 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/MakakLabs/linux-amlogic-m3.git"
 BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="staging"
-BR2_LINUX_KERNEL_DEFCONFIG="meson_reff16_gbox_v2.1"
+BR2_LINUX_KERNEL_DEFCONFIG="meson_reff16_gbox"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/amlogic/M1_M3/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_ALSA_UTILS_ALSACONF=y
