--- a/configs/m3_linux_f16ref_gbox_v2.1_defconfig
+++ b/configs/m3_linux_f16ref_gbox_v2.1_defconfig
@@ -20,8 +20,8 @@ BR2_TARGET_GENERIC_ROOT_PASSWD="letmein"
 BR2_ROOTFS_OVERLAY="board/amlogic/M1_M3/overlay"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
-BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/MakakLabs/linux-amlogic-m3.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="staging"
+BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/J1nx-Hackable-Gadgets/buildroot-linux-kernel-m3.git"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="1b48458d3e670a7d2f2cd968e9ae7387887469a8"
 BR2_LINUX_KERNEL_DEFCONFIG="meson_reff16_gbox"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/amlogic/M1_M3/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
