gbox move to linaro

--- a/configs/m3_linux_f16ref_gbox_defconfig
+++ b/configs/m3_linux_f16ref_gbox_defconfig
@@ -5,10 +5,10 @@ BR2_ARM_ENABLE_NEON=y
 BR2_ARM_FPU_VFPV3D16=y
 BR2_ARM_AMLOGIC=y
 BR2_BOARD_TYPE_AMLOGIC_M3=y
-BR2_OPTIMIZE_3=y
+BR2_OPTIMIZE_2=y
 BR2_TOOLCHAIN_EXTERNAL=y
-BR2_TOOLCHAIN_EXTERNAL_CODESOURCERY_ARM2010Q1=y
-BR2_TOOLCHAIN_EXTERNAL_CODESOURCERY_GCONV=y
+BR2_TOOLCHAIN_EXTERNAL_LINARO_2013_04=y
+BR2_TOOLCHAIN_EXTERNAL_LINARO_GCONV=y
 BR2_PACKAGE_HOST_GDB=y
 BR2_EXT_TOOL_DIRS_EXTRA="/usr/share/zoneinfo"
 BR2_TARGET_GENERIC_HOSTNAME="G-Box"
@@ -35,8 +35,8 @@ BR2_PACKAGE_MPG123=y
 BR2_PACKAGE_LIBAMPLAYER=y
 BR2_PACKAGE_LIBAMPLAYER_SOURCE=y
 BR2_PACKAGE_LIBAMPLAYER_SOURCE_GIT=y
-BR2_PACKAGE_LIBAMPLAYER_SOURCE_URL="https://github.com/J1nx-Hackable-Gadgets/libamplayer-m3.git"
-BR2_PACKAGE_LIBAMPLAYER_SOURCE_VERSION="6c9c2d41a06764ee04679be43c3b70807005c6fd"
+BR2_PACKAGE_LIBAMPLAYER_SOURCE_URL="https://github.com/MakakLabs/libamplayer-m3.git"
+BR2_PACKAGE_LIBAMPLAYER_SOURCE_VERSION="linaro"
 BR2_PACKAGE_SPEEDTEST_CLI=y
 BR2_PACKAGE_OPENGL_API9=y
 BR2_PACKAGE_XBMC=y
